--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "time-tracking-dashboard-main",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://CHEGEBB.github.io/time-tracking-dashboard-main",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -15,6 +16,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
